Real-BackEnd/src/main/java/com/example/BeFETest/error/EnumModel.java
package com.example.BeFETest.error;

public interface EnumModel {


    String getKey();
    String getValue();
}
